# irods_client_library_c

./: CMakeLists.txt  missing_things.txt
include/api/: apiNumber.h  apiTable.hpp  getRescQuota.h
include/core/: apiHandler.hpp  base64.h  bulkOprInfo.h  irods_plugin_base.hpp  rcMisc.h  rcPortalOpr.h  sslSockComm.h
server/core/src/: irods_logger.cpp  irods_resource_manager.cpp  rodsConnect.cpp
src/api/: apiNumber.cpp
src/core/: apiHandler.cpp  getRodsEnv.cpp  irods_client_api_table.cpp  irods_client_negotiation.cpp  miscUtil.cpp  rcMisc.cpp  rcPortalOpr.cpp  rodsPath.cpp  sslSockComm.cpp
src/rbudp/: recvfile.cpp  sendfile.cpp
unit_tests/: main.cpp
